# trs_3

./: CMakeLists.txt  Untitled.ipynb  ~$бораторная работа ТРС 3.docx  Лабораторная работа ТРС 3.docx
trs_3/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  trs_3.h
trs_3/eigen-3.4.0/: .gitignore
